--- a/style.css
+++ b/style.css
@@ -1,5 +1,140 @@
+[data-tab-content] {
+  display: none;
+}
 
+.active[data-tab-content] {
+  display: block;
+}
 
 .hidden {
-    display: none;
-  }
+  display: none;
+}
+
+
+
+h1 {
+  text-align: center;
+}
+
+body {
+  background-color: #f1f1f1;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.mainForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.charNameForm input[type="text"] {
+  width: 100%;
+  height: 30px;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.raceForm {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 10px; 
+}
+
+.classForm {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 20px; 
+}
+
+.levelForm {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 20px; 
+}
+
+.levelForm input[type="number"] {
+  width: 50px;
+  height: 30px;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.charResults{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.characterStats {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.characterStats input[type="number"] {
+  width: 50px;
+  height: 60px;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.flavor {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.generateButton {
+  margin-top: 10px;
+  width: 100%;
+  height: 50px;
+  font-size: 25px;
+  border-radius: 5px;
+  border-width: 1.5px;
+  border-color: black;
+
+}
+
+.tabs {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 5px;
+  border-bottom: 2px solid black;
+}
+
+.tab {
+  cursor: pointer;
+  padding: 10px;
+}
+
+.tab.active {
+  background-color: #EEE;
+}
+
+.tab:hover {
+  background-color: #ddd;
+  border-radius: 5px;
+}
+
+.tab-content {
+  padding: 10px;
+  border: 1px solid black;
+  border-top: none;
+  margin-bottom: 20%;
+}
