--- a/style.css
+++ b/style.css
@@ -45,6 +45,14 @@ body {
   margin-top: 10px; 
 }
 
+.raceForm select {
+  width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
 .classForm {
   display: flex;
   justify-content: space-evenly;
@@ -105,6 +113,11 @@ body {
   border-width: 1.5px;
   border-color: black;
 
+}
+
+.generateButton:hover {
+  background-color: #CCC;
+  border-radius: 5px;
 }
 
 .tabs {
