--- a/homepage.css
+++ b/homepage.css
@@ -7,17 +7,21 @@ body{
 
 h1{
     text-align: center;
-    color: white; /* Added font color */
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-weight: bold;
     font-size: 70px;
+    border-bottom: rgb(164, 0, 0) solid 2px;
+    border-top: rgb(164, 0, 0) solid 2px;
+    padding-top: 10%;
+    padding-bottom: 10%;
 
 }
 
 h2 {
     text-align: center;
-    color: white; /* Added font color */
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-weight: bold;
@@ -27,7 +31,7 @@ h2 {
 
 p{
     text-align: center;
-    color: white; /* Added font color */
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
 }   
@@ -48,6 +52,8 @@ p{
 .info1 {
     margin-top: 10%;
     margin-bottom: 30%;
+    border-top: rgb(164, 0, 0) solid 2px;
+    padding-top: 10%;
 }
 
 .info2 {
